tests/unit-compatibility-test/fixtures/sonarqube/networkpolicy-values.yaml
---
# Source: sonarqube/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-values.yaml-sonarqube-network-policy
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: networkpolicy-values.yaml
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: sonarqube
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: sonarqube
              release: networkpolicy-values.yaml
      ports:
        - port: 9000
    
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: "::/0"
---
# Source: sonarqube/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: networkpolicy-values.yaml-sonarqube-additional-network-policy
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: networkpolicy-values.yaml
    heritage: Helm
spec:
  egress:
  - ports:
    - port: 5978
      protocol: TCP
    to:
    - ipBlock:
        cidr: 10.0.0.0/24
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
---
# Source: sonarqube/templates/secret.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: networkpolicy-values.yaml-sonarqube-monitoring-passcode
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: networkpolicy-values.yaml
    heritage: Helm
type: Opaque
data:
  SONAR_WEB_SYSTEMPASSCODE: "dGVzdA=="
---
# Source: sonarqube/templates/secret.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: networkpolicy-values.yaml-sonarqube-http-proxies
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: networkpolicy-values.yaml
    heritage: Helm
type: Opaque
stringData:
  PLUGINS-HTTP-PROXY: ""
  PLUGINS-HTTPS-PROXY: ""
  PLUGINS-NO-PROXY: ""
  PROMETHEUS-EXPORTER-HTTP-PROXY: ""
  PROMETHEUS-EXPORTER-HTTPS-PROXY: ""
  PROMETHEUS-EXPORTER-NO-PROXY: ""
---
# Source: sonarqube/templates/config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: networkpolicy-values.yaml-sonarqube-config
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: networkpolicy-values.yaml
    heritage: Helm
data:
  sonar.properties: |
---
# Source: sonarqube/templates/init-sysctl.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: networkpolicy-values.yaml-sonarqube-init-sysctl
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: networkpolicy-values.yaml
    heritage: Helm
data:
  init_sysctl.sh: |-
    set -o errexit
    set -o xtrace
    vmMaxMapCount=524288
    if [[ "$(sysctl -n vm.max_map_count)" -lt $vmMaxMapCount ]]; then
      sysctl -w vm.max_map_count=$vmMaxMapCount
      if [[ "$(sysctl -n vm.max_map_count)" -lt $vmMaxMapCount ]]; then
        echo "Failed to set initSysctl.vmMaxMapCount"; exit 1
      fi
    fi
    fsFileMax=131072
    if [[ "$(sysctl -n fs.file-max)" -lt $fsFileMax ]]; then
      sysctl -w fs.file-max=$fsFileMax
      if [[ "$(sysctl -n fs.file-max)" -lt $fsFileMax ]]; then
        echo "Failed to set initSysctl.fsFileMax"; exit 1
      fi
    fi
    nofile=131072
    if [[ "$(ulimit -n)" != "unlimited" ]]; then
      if [[ "$(ulimit -n)" -lt $nofile ]]; then
        ulimit -n $nofile
        if [[ "$(ulimit -n)" -lt $nofile ]]; then
          echo "Failed to set initSysctl.nofile"; exit 1
        fi
      fi
    fi
    nproc=8192
    if [[ "$(ulimit -u)" != "unlimited" ]]; then
      if [[ "$(ulimit -u)" -lt $nproc ]]; then
        ulimit -u $nproc
        if [[ "$(ulimit -u)" -lt $nproc ]]; then
          echo "Failed to set initSysctl.nproc"; exit 1
        fi
      fi
    fi
---
# Source: sonarqube/templates/install-plugins.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: networkpolicy-values.yaml-sonarqube-install-plugins
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: networkpolicy-values.yaml
    heritage: Helm
data:
  install_plugins.sh: |-
---
# Source: sonarqube/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: networkpolicy-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: networkpolicy-values.yaml
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sonarqube
    release: networkpolicy-values.yaml
---
# Source: sonarqube/templates/sonarqube-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: networkpolicy-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: networkpolicy-values.yaml
    heritage: Helm
    app.kubernetes.io/name: networkpolicy-values.yaml
    app.kubernetes.io/instance: networkpolicy-values.yaml
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: sonarqube
    app.kubernetes.io/component: networkpolicy-values.yaml-sonarqube
    app.kubernetes.io/version: "2026.5.2-enterprise"
spec:
  replicas: 1
  revisionHistoryLimit: 10
  serviceName: networkpolicy-values.yaml-sonarqube
  selector:
    matchLabels:
      app: sonarqube
      release: networkpolicy-values.yaml
  template:
    metadata:
      annotations:
        checksum/config: fd16bae0b99dd9c3e1cb5a3c5625c94b523b3871180ecb05e56c91424a6ec2c9
        checksum/init-sysctl: 4b0b88501ad4ef95407ac38e2290654c22b4a5936ce8eb5222729f53b116880b
        checksum/plugins: 0adc2e0fa26daa8757d7876a6b3533f7f3894eeb3c8864ead8a828163df3a0ae
        checksum/secret: d9778c1fe4755a5d1587745999ba4240be5dec75aa84550a49f3f5cd4b3b2b30
      labels:
        app: sonarqube
        release: networkpolicy-values.yaml
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 0
      initContainers:
        - name: init-sysctl
          image: sonarqube:2026.5.2-enterprise
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            readOnlyRootFilesystem: true
            runAsUser: 0
          command: ["/bin/bash", "-e", "/tmp/scripts/init_sysctl.sh"]
          volumeMounts:
            - name: init-sysctl
              mountPath: /tmp/scripts/
          env:
            - name: SONAR_WEB_CONTEXT
              value: /
            - name: SONAR_WEB_JAVAOPTS
              value: ""
            - name: SONAR_CE_JAVAOPTS
              value: ""
      containers:
        - name: sonarqube
          image: sonarqube:2026.5.2-enterprise
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          resources:
            limits:
              cpu: 800m
              ephemeral-storage: 512000M
              memory: 10240M
            requests:
              cpu: 400m
              ephemeral-storage: 1536M
              memory: 4096M
          env:
            - name: SONAR_HELM_CHART_VERSION
              value: 2026.5.1002
            - name: SONAR_WEB_SYSTEMPASSCODE
              valueFrom:
                secretKeyRef:
                  name: networkpolicy-values.yaml-sonarqube-monitoring-passcode
                  key: SONAR_WEB_SYSTEMPASSCODE
            - name: SONAR_WEB_CONTEXT
              value: /
            - name: SONAR_WEB_JAVAOPTS
              value: ""
            - name: SONAR_CE_JAVAOPTS
              value: ""
          envFrom:
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                curl --noproxy "*" -fsS -o /dev/null --max-time 5 -H "X-Sonar-Passcode: $SONAR_WEB_SYSTEMPASSCODE" "http://localhost:9000/api/system/liveness"
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                #!/bin/bash
                # A Sonarqube container is considered ready if the status is UP, DB_MIGRATION_NEEDED or DB_MIGRATION_RUNNING
                # status about migration are added to prevent the node to be kill while SonarQube is upgrading the database.
                if curl --noproxy "*" -s http://localhost:9000/api/system/status | grep -q -e '"status":"UP"' -e '"status":"DB_MIGRATION_NEEDED"' -e '"status":"DB_MIGRATION_RUNNING"'; then
                  exit 0
                fi
                exit 1
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /api/system/status
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 24
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsGroup: 0
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /opt/sonarqube/data
              name: sonarqube
              subPath: data
            - mountPath: /opt/sonarqube/temp
              name: sonarqube
              subPath: temp
            - mountPath: /opt/sonarqube/logs
              name: sonarqube
              subPath: logs
            - mountPath: /tmp
              name: tmp-dir
            - mountPath: /opt/sonarqube/extensions
              name: sonarqube
              subPath: extensions
      serviceAccountName: default
      volumes:
        
        - name: init-sysctl
          configMap:
            name: networkpolicy-values.yaml-sonarqube-init-sysctl
            items:
              - key: init_sysctl.sh
                path: init_sysctl.sh
        - name: sonarqube
          emptyDir:
            {}
        - name : tmp-dir
          emptyDir:
            {}
---
# Source: sonarqube/templates/tests/sonarqube-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "networkpolicy-values.yaml-ui-test"
  annotations:
    "helm.sh/hook": test-success
    # Disable Istio sidecar injection for this test pod
    "sidecar.istio.io/inject": "false"
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: networkpolicy-values.yaml
    heritage: Helm
spec:
  automountServiceAccountToken: false
  containers:
    - name: networkpolicy-values.yaml-ui-test
      image: "sonarqube:2026.5.2-enterprise"
      imagePullPolicy: IfNotPresent
      command: ['curl']
      args: [
        '--retry-connrefused',
        '--retry',
        '12',
        '--retry-delay',
        '1',
        '--max-time',
        '5',
        '-s',
        'networkpolicy-values.yaml-sonarqube:9000/api/system/status'
        ]
      resources:
        limits:
          cpu: 500m
          ephemeral-storage: 1000M
          memory: 200M
        requests:
          cpu: 500m
          ephemeral-storage: 100M
          memory: 200M
  restartPolicy: Never
